--- a/MyReports/.settings/org.eclipse.core.resources.prefs
+++ b/MyReports/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding/<project>=UTF-8
+encoding/LandPurchaseSummary.jrxml=UTF-8
 encoding/invoice_view.jrxml=UTF-8
